# ChangeLog for dev-python/twisted-web
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-web/ChangeLog,v 1.95 2013/11/24 18:37:41 ago Exp $

  24 Nov 2013; Agostino Sarubbo <ago@gentoo.org> twisted-web-12.3.0.ebuild:
  Stable for arm, wrt bug #468150

  06 Sep 2013; Agostino Sarubbo <ago@gentoo.org> twisted-web-12.3.0.ebuild:
  Stable for sparc, wrt bug #468150

  05 Sep 2013; Agostino Sarubbo <ago@gentoo.org> twisted-web-12.3.0.ebuild:
  Stable for ppc64, wrt bug #468150

  04 Sep 2013; Agostino Sarubbo <ago@gentoo.org> twisted-web-12.3.0.ebuild:
  Stable for ppc, wrt bug #468150

  03 Sep 2013; Agostino Sarubbo <ago@gentoo.org> twisted-web-12.3.0.ebuild:
  Stable for ia64, wrt bug #468150

  01 Sep 2013; Agostino Sarubbo <ago@gentoo.org> twisted-web-12.3.0.ebuild:
  Stable for alpha, wrt bug #468150

  01 Sep 2013; Agostino Sarubbo <ago@gentoo.org> twisted-web-12.3.0.ebuild:
  Stable for x86, wrt bug #468150

  01 Sep 2013; Agostino Sarubbo <ago@gentoo.org> twisted-web-12.3.0.ebuild:
  Stable for amd64, wrt bug #468150

  23 Aug 2013; Jeroen Roovers <jer@gentoo.org> twisted-web-12.3.0.ebuild:
  Stable for HPPA (bug #468150).

  09 Aug 2013; Michał Górny <mgorny@gentoo.org> twisted-web-13.0.0-r1.ebuild:
  Drop stale versionator inherit.

*twisted-web-13.0.0-r1 (09 Aug 2013)

  09 Aug 2013; Michał Górny <mgorny@gentoo.org> +twisted-web-13.0.0-r1.ebuild:
  Migrate to twisted-r1.

  03 Aug 2013; Michał Górny <mgorny@gentoo.org> twisted-web-10.2.0.ebuild,
  twisted-web-11.0.0.ebuild, twisted-web-11.1.0.ebuild,
  twisted-web-12.0.0.ebuild, twisted-web-12.2.0.ebuild,
  twisted-web-12.3.0.ebuild, twisted-web-13.0.0.ebuild:
  Move dev-python/twisted to dev-python/twisted-core.

*twisted-web-13.0.0 (08 Apr 2013)

  08 Apr 2013; Patrick Lauer <patrick@gentoo.org> +twisted-web-13.0.0.ebuild:
  Bump

*twisted-web-12.3.0 (14 Jan 2013)
