@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST TwistedWeb-10.2.0.tar.bz2 334605 SHA256 d09c459590f23b824043093450916b22a2eea29d1838d69725413a5abb8350ba SHA512 d3df41b19b1f3991d0799f819e47a218d424a21ff5f241e724bb36e8214726d685f87096954bcac8d0ceed47d00113d60b45ba6565639ac1ed89502ebadb7507 WHIRLPOOL e284680ed1342729319a4b0afd5e5324755d672a75499f1e5cf14df033ddd70f779f710ece67a3f82d6bc0d753d6da9b2fc4cefc2e1563edf9e3712a36095142
 DIST TwistedWeb-11.0.0.tar.bz2 358074 SHA256 864a08aa283ba690f35cfbc18ba939a8b336bc6ad452a2a855bdf1b388aaac53 SHA512 6a61a7743007691e2f7e0242ccc7242ee1570f3e74b6f5ea9b06d601b65b4e3495bdaa94d4bb5bb7baf86c88c8796ff9782737b07df77c2cb67aa2fb46a7e9ea WHIRLPOOL 227782418c1c66d3f0b33ae21e5e52672e783510f1b474536f600dcc64818db77528148194e044c1a957572b5d0f6fb8f155f71751820979f243d52796552358
@@ -8,6 +8,7 @@ DIST TwistedWeb-12.0.0.tar.bz2 374609 SHA256 ff6d0dad12f1928deca23c8d05a0cb9a340
 DIST TwistedWeb-12.2.0.tar.bz2 386461 SHA256 15b962fd7ca4f8079bca6d0f83fc28207d8671b13da4b598b25a52578866d309 SHA512 2d33e9716e004566c7c20dfda24317d5a3e994eadf2e419129ca26a750d7e75503930557ad6562e141e74a37ea2dc9fdb7d78a64cfe6d53ec9988a636a4aa1c2 WHIRLPOOL 80fe90c11ff432f81871f40fa8d841226fc7fdb0497f05608ff4bdf3840942023043d2dd76c3bbaf87ffd88005064fdc1a9a232a70ed9783674175fb21f6a7a3
 DIST TwistedWeb-12.3.0.tar.bz2 393179 SHA256 d13e220235788f5e2542c9f8f906fe79e59793f5212cd9862002ea084ea666ca SHA512 2c1d857a0f92b781cc683e59f7e0e16b6a1158b1a45a9b947635da2bbaf78f0988bcf6503ad58b6c5109ab710db3c2f860ac4d446654c55394c49fdc7dc5b3e4 WHIRLPOOL 59c4db46679d0c7de3b881256aee1e0a2c6a33e6a7a481554a3b9b419f172774ec28a30849d731479b1659a7eb6a30713bd033ec72ea5c6943cb15d09483dee1
 DIST TwistedWeb-13.0.0.tar.bz2 395974 SHA256 a3f6b3a47950d96a6da5cf28bf4c1e0bfa894ff2a1c38c38eac4876cac0bdc55 SHA512 d034a63a8d9a52f2db7967e57245a18ff288f1030579204286cc6d4990afe6fa30fb8aa73f62460ecaabaa76c1cc20be75aef0382f5c1bd565bef7923a9c86f8 WHIRLPOOL 93f8eab34be254c7f28aed1c95fcd9963f7038529a3d88ea014d0f2ea996f18955e3a672c89156d379b3fbe15822b21b0be0e7d35bf08bc6b0cf569607f87c0c
+DIST twisted-web-13.2.0.tar.bz2 403931 SHA256 aee160e0264d9dbaa0ec0613851128c91e3ac4246d3e9e13a6f2cfdfe7a4904f SHA512 69e721ec456214d000f88268340b7cf21186073af11e7f906bf95c9a1bfaf49fdc5832b4e39586ebdddd3f1378bf823ab147de58d7aa9e8491a2561a54389a1f WHIRLPOOL 9b6d02398cd29e763107338b7b0a2fd60f5ff9ea4d7578d179411c1e6470445621484cb532688d3d72f7634c5a119e52c5df86bfc462de0adf8da1ef875e3bf2
 EBUILD twisted-web-10.2.0.ebuild 1114 SHA256 593573c6e61dad94cd169c2b38e63a1da9d0d41a4641462618b0886e9f3badb8 SHA512 a933f851933aadf8d7e6ae7d683a74b2c2a07b9efbaf89fc8ef9193a38e58e284d088345d990589a08e87a00ab8a3638fd5d7f6a7d53cb335488d85192e6b0ba WHIRLPOOL 1c9b32dae2f79694096cd3fedd42a75c4f08eba6bdcbe26b26610241a672449ab42d4077291d1e50c00b363b9d302db620fab1613927d92d3ead6416b8e58b61
 EBUILD twisted-web-11.0.0.ebuild 1114 SHA256 d084dbef1817e65644a52c03fd2e804f06a2a466dc9a12497bc222234edcbaaf SHA512 4c74941d84d52bf12ee3b3d3686c672f43dab9c5ea863fe3a2ba902fb33c99c7c3f52e1db8c7c6a5e9ac69b9239b8ccc62bb3ac250b7d339c338a8949a6d6b4f WHIRLPOOL cbffb303fa1ffc78fd82b7e7db41837e72820a69a353eb9720e6e5010058d486c6b9589fb72d0673f449bfecddf13a4a2ac2697789f575d31f66c019e1d982a4
 EBUILD twisted-web-11.1.0.ebuild 1115 SHA256 d8249506eb6bf0515a94a298a7186e28e2cbcd733928b5207e671a56994a624c SHA512 0d37bb7c6112ca16a208e6afba9be5b948c14a7cedb9ee756ffc171518a1d387e43fe68f9abbff709aeb56034cc04968d62d218a51c9333f55300778047ea36f WHIRLPOOL 104938167758b4d41fb750ee920a50a069c3d6aa71183d91d10845f412715764d5a473b92d04213f63c93b9d1cfa58c9087b7cc14cbb41fc5c064f4895708c05
@@ -16,22 +17,13 @@ EBUILD twisted-web-12.2.0.ebuild 1135 SHA256 da451b36931278f9b2400872be85c9aa88b
 EBUILD twisted-web-12.3.0.ebuild 1124 SHA256 40c235cb8b16b3a9fc9658b5ea4c6a65169521d70283e32b6c9df1c16f54b418 SHA512 50916815fc2faef9c52738610e1c027d48e5f1f8b0282edbc702fd396ab8874b9a3f82437b9e308c6bc6136ae8dcfd1395ba091947fc84a6fa642c49e6be84c2 WHIRLPOOL 821998061a398dbe57677936f62823f5e99b22b572ed4894b3f875bc9b13b608c2c970c9b0cecce24b0793e54594419278fe49dbad7111d31f87935b30df27fe
 EBUILD twisted-web-13.0.0-r1.ebuild 1051 SHA256 c07aa750c903db19dd906d7f1cbea84d6b6e6c5b1e79c2e91cb84ec39f34f4d8 SHA512 cd3ee1edd476df226fb74bd7d674dc5c7dc7d43d8248a6a5e62cfaa572b02662abf59a993eac3ce77303dab7452af992d1b6fb6ad0a1aec05c21beb5f2ba7653 WHIRLPOOL 3f361c3467c3927afdffadc2051d0f2933c01b6cc29dc4f9afe49025b1dfa9fa5bcf91f93a52978391e7cc229162bb87bff32c0f3c8910eef5f80655a697b7a5
 EBUILD twisted-web-13.0.0.ebuild 1135 SHA256 617be1d160bf3247c263d6259ef4eb394e23c087db4a0b3d34500d17b6a7d6b5 SHA512 7c53a9ae42e73ad3684994cbb11c0edc04ccf017e5d93011b21e7bb661383627fcb00ffa29ca605abdfd3936c9ec963ad4a073c63e73542522f0cc6d55855669 WHIRLPOOL 44c3d7741a4092cc6896e6fca862d8473eabcfb5b3da0c503f7ec9250c43905cde1732673e0100c25286117ffbd60d70e68cf8eeea95837dd9ee3c26dd56065b
-MISC ChangeLog 12939 SHA256 ff7b4f49a2ebd3b1e681836172188674e176ba20eaf2e99ea5a6514c691aa168 SHA512 ed6c3e395d1838acc771470e411bed9229735ff7bcb95be93ebde11077633501c01f7295a12a7024b6bf0f823dc6972f703caff094a76069370fff48c84b9c1b WHIRLPOOL 62014562f1d47e32ef96e7de5622cbc66cee8db54088efabce49bd9948dc69d8785891b2f3b3a9971f52c1f97ed27919d6007b30c9325d04f9f18cc6a8365b8c
+EBUILD twisted-web-13.2.0.ebuild 1385 SHA256 3c52530dbc305cd8fd5873fd97e4d02b15d2906f327f2e2334d733eb7baa2a4b SHA512 4cffbaefe38674abea08a2771e51d5dbdf549aebe0771bd6334cb6b2ff0f3b789079c99d20179ea7e379298c46198043b684dbf9c4d9faf5eccea7f6af702a6b WHIRLPOOL 9979275f270569051b32c99003feac5bf7f83dd55b2926b7c45c41deb28b16122f3b86b1d529197f2d3f4bf35ebecbe4f636971029d690ca8fd56d47d50c7e42
+MISC ChangeLog 13077 SHA256 cc5ea6eb8a3ceff560a2a34cbfc626ddf3f40b8319c7b1d855665a2f1113c8ff SHA512 fa2d1893f26786ef3b59cd361c7cec20749dda4d7c64b922c13c8efbec8173e6789b559a177f635cb2ebd341dff4c7528193a6d264022b3aeb0a5394cc189a48 WHIRLPOOL e5f72a11fe40068429cf2e45057757341a7957f4dd540a132159c3edce3397a85e862a1a29e1213a7ade4d923f253fef17bcd7fe8f68a3a13ad37d8bd363bf70
 MISC metadata.xml 160 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a SHA512 7c02a1de1ddcb6b7c6378cceff0458da3a15d5381417f7cdf01874e7c372664b8899863f41b3a2fd8d6ad67ceb732dac6da0cc17575bf8e3e6d89480417c6628 WHIRLPOOL ed2795e4466eda8c804d5067c87386e269a59fe959393057ca5ddc36851e00f5210c4da1adf4bbdfdbb7d1d3d5c60aced25727ca12fdc8305d9e263a3aca9b13
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSkkdjAAoJELp701BxlEWf5agP/0xCuIbv2oFz5+uW0gcXdONJ
-lKCoqmp1ZYMaYT2EHUtS/6Efn15rht3JHGUUG/lI/lAHJvQPjP4VPYZEbq0DYVqy
-0kL4PNlwARZ5VSW7CClfaLQpo1LJEZsReaF1felxliT4zbXHyTML2mHjlB4MHZwP
-pjWwAwXzYqf+NeXihm/mD2pKMXdRrVQDPA5pRWnLhKNRb8e1Ni1fbbuoQQqBrWN3
-lduE4fq2FxAQy+hQhCHn5dQKW3MhREYbGMA/aWQmZwQr1fdZUneL1NFljKDDYUP3
-CDKKAwnHWRlOab/mBJV8VdWRu1MriqDoGvTEnMwRN2fizgFJIeCisH4SK/KaEP5U
-BV3eTDusBVZmt62wItGS2g77I5MQDJZntCrcvNWHMfGFrHvMbRWkhWIMlSdSd5Db
-oOp/16EH7pUtpdkGutcbagA3Hrhdo388uaAtbTqP1XvoVnNE9yc9EWqAOhEJkBvd
-xMfkQ4zBapBlOnCkuQrsysL4AocAY2SOQ+RWY4UygBK90GLV7Wa1jUXY1MrPeUQx
-W4wBpEXil6OZ6lCZAxcBi7ueT2gBqUGdIfZFNvJThZsgUDt21rK43bhFaSSpkp7K
-/2e6nr+JxqXJi3YCyCbK3mxsZhQ/7BBsuUr6b2Qv03l3P1TK4YUNfjdLOkM1yzVW
-PxXQWDuONmOSCUT4aMLS
-=GT9G
+iEYEAREIAAYFAlLbkzkACgkQso7CE7gHKw2x1gCfZzK8QblwaO+OA3kuc3n8Ss9z
+DBwAn1dWcan3C577T6qTcHxlfBQXP8+H
+=fFje
 -----END PGP SIGNATURE-----
