@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/twisted-web
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-web/ChangeLog,v 1.95 2013/11/24 18:37:41 ago Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-web/ChangeLog,v 1.96 2014/01/19 09:01:56 idella4 Exp $
+
+*twisted-web-13.2.0 (19 Jan 2014)
+
+  19 Jan 2014; Ian Delaney <idella4@gentoo.org> +twisted-web-13.2.0.ebuild:
+  bump; add 1 new dep
 
   24 Nov 2013; Agostino Sarubbo <ago@gentoo.org> twisted-web-12.3.0.ebuild:
   Stable for arm, wrt bug #468150
